--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
         <activity android:name=".SignupActivity">
+        </activity>
+        <activity android:name=".CommentaireActivity">
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
